# stack-graphs

./: Cargo.toml
stack-graphs-cli/: Cargo.toml  README.md
tree-sitter-stack-graphs/: Cargo.toml
tree-sitter-stack-graphs/src/: lib.rs
tree-sitter-stack-graphs/tests/it/: edges.rs  nodes.rs
