[package]
name = "tree-sitter-stack-graphs"
version = "0.0.0"
description = "Create stack graphs using tree-sitter parsers"
homepage = "https://github.com/github/stack-graphs/tree-sitter-stack-graphs"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
lsp-positions = { version="0.1", path="../lsp-positions" }
stack-graphs = { version="0.4", path="../stack-graphs" }
thiserror = "1.0"
tree-sitter = ">= 0.19"

[dependencies.tree-sitter-graph]
version = "0.2"
# TODO: Remove this once the relevant tree-sitter-graph PRs are merged and
# released upstream.
git = "https://github.com/tree-sitter/tree-sitter-graph"
rev = "a263e6c9af5e2b23d940451bba9b43bd9aca46ce"

[dev-dependencies]
pretty_assertions = "0.7"
tree-sitter-python = "0.19.1"
